# wry_standalone

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
examples/project1/src/: index.html  index.js  test.html
install/: install.ps1
scripts/: install.sh
src/: embed_assets.rs  helpers.rs  main.rs  standalone.rs
