[package]
name = "wry-standalone"
version = "0.1.0"
authors = ["David Lemarier <david@lemarier.ca>"]
edition = "2018"

[dependencies]
wry = "0.6"
clap = "2.33"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1"
walkdir = "2"
phf = { version = "0.8", features = ["macros"] }
zstd = "0.6.1"
deno_core = "0.82"
deno_runtime = "0.10"
tokio = { version = "1.4.0", features = ["full"] }
winit = "0.24.0"
wry_deno = { git = "https://github.com/lemarier/wry_deno.git", branch = "main" }
deno_json_op = "0.1.1"


[[bin]]
name = "wry"
path = "src/main.rs"