[package]
name = "wry-standalone"
version = "0.1.2"
authors = ["David Lemarier <david@lemarier.ca>"]
edition = "2018"

[dependencies]
wry = "0.6"
clap = "2.33"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1"
walkdir = "2"
zstd = "0.6.1"
deno_core = "0.82"
deno_runtime = "0.10"
tokio = { version = "1.4.0", features = ["full"] }
winit = "0.24.0"
deno_json_op = "0.1.1"

[target."cfg(target_os = \"linux\")".dependencies]
webkit2gtk = { version = "0.11", features = [ "v2_8" ] }
gtk = "0.9"
gio = "0.9"

[[bin]]
name = "wry"
path = "src/main.rs"