[package]
name = "wry-standalone"
version = "0.1.5"
authors = ["David Lemarier <david@lemarier.ca>"]
edition = "2018"

[dependencies]
wry = "0.6.2"
clap = "2.33"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1"
walkdir = "2"
zstd = "0.6.1"
deno_core = "0.82"
deno_runtime = "0.10"
tokio = { version = "1.4.0", features = ["full"] }

[target."cfg(target_os = \"linux\")".dependencies]
webkit2gtk = { version = "0.11", features = [ "v2_8" ] }
gtk = "0.9"
gio = "0.9"

[target."cfg(target_os = \"windows\")".dependencies]
tauri-winit = "0.24"

[target."cfg(target_os = \"macos\")".dependencies]
tauri-winit = "0.24"

[[bin]]
name = "wry"
path = "src/main.rs"